

2005/01/14: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added function GWEN_Path_HandleWithIdx(), make GWEN_DB use this instead of
  the old function.
  This results in GWEN_DB_ being able to handle indices, like in
  "root/group[2]/var[1]"
- now version numbers always use three digits (except for CVS packages).
  @Christian: You won ;-)


2005/01/13: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- valgrind session, fixed memory leaks in:
  - GWEN_NetTransport_free()
  - GWEN_WaitCallback_free()
- added memtrace code to debug*.{c,h}
- improved function GWEN_NetConnectionHTTP_Work(): It now only calls the 
  WorkIO function if necessary, otherwise it doesn't: This might fix the
  problem with AqHBCI and banks which terminate the connection before all
  messages have been read. This way this function only returns an error if
  no there are no more messages in the queues.


2005/01/12: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- fixed a minor bug in typemaker tool (was not honouring "const" property
  for lists)


===========================================================================
MARK: released gwenhywfar-1.4.1 (2005/01/12)
===========================================================================


2005/01/12: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- fixed a bug in msgengine.c: Was using hardcoded escape character in call to
  typeRead function


2005/01/11: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- lightened up SSL connection code: Now all errors will be presented to the
  user
- added var to certificate DB in GWEN_NetTransportSSL__AskAddCert():
  - statusText: explanation of the reason why the user is asked


2005-01-11   Christian Stimming <stimming@tuhh.de>

	* gwenhywfar.spec.in: Add BuildRequires to ensure a sane rpm