@@ -17,8 +17,8 @@ AC_CONFIG_HEADER([config.h])
 # versions
 #
 GWENHYWFAR_VERSION_MAJOR=1
-GWENHYWFAR_VERSION_MINOR=4
-GWENHYWFAR_VERSION_PATCHLEVEL=2
+GWENHYWFAR_VERSION_MINOR=5
+GWENHYWFAR_VERSION_PATCHLEVEL=0
 GWENHYWFAR_VERSION_BUILD=0
 dnl "stable", "rcX", "betaX", "cvs"
 GWENHYWFAR_VERSION_TAG="stable"
